[package]
name = "dxx_file_transfer"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }
error-chain = "0.10"
futures = "0.1"
futures-cpupool = "0.1"
hyper = { version = "0.10", default-features = false }
log = "0.3"
log4rs = "0.6"
regex = "0.2"
rocket = "0.2"
rocket_codegen = "0.2"
rocket_contrib = "0.2"
rusqlite = "0.11"
runtime-fmt = "0.1"
rustc-serialize = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
structopt = "0.0"
structopt-derive = "0.0"
toml = "0.3"
url = "1.4"